--- a/server/pom.xml
+++ b/server/pom.xml
@@ -62,12 +62,19 @@
       <artifactId>spring-boot-starter-jdbc</artifactId>
     </dependency>
 
+  <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-commons</artifactId>
+    </dependency>
+
     <!-- MySQL Connector -->
     <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
       <scope>runtime</scope>
     </dependency>
+
+   
 
     <!-- Spring Boot Test Starter (includes JUnit 5) -->
     <dependency>
